--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Enlaces de Navegación -->
         <div class="hidden md:flex space-x-6">
             <a href="#" class="text-white hover:text-gray-400">Inicio</a>
-            <a href="#" class="text-white hover:text-gray-400">Catálogo</a>
+            <a href="catalogo.html" class="text-white hover:text-gray-400">Catálogo</a>
             <a href="#" class="text-white hover:text-gray-400">Contacto</a>
         </div>
     
