--- a/catalogo.html
+++ b/catalogo.html
@@ -39,7 +39,9 @@
             <a href="contacto.html" class="text-white hover:text-gray-400">Contacto</a>
         </div>
     </nav>
+
     <br>
+    
     <h2 class="text-6xl font-extrabold text-center mt-6">Catálogo de Juegos</h2>
     
     <h3 class="text-xl font-bold text-center mt-2 mb-0">Explora nuestra selección de juegos</h3>
@@ -55,31 +57,31 @@
             <p class="font-['Lato'] text-xl font-semibold text-gray-700 mt-5 shadow-text-sm">Dead by Daylight<br> &#36;19.990</p>
         </div>
         <div class="text-center">
-            <a href="producto2.html">
+            <a href="detalle2.html">
                 <img src="https://wallpapercave.com/wp/wp14410139.jpg" alt="Producto 2" class="w-64 h-90 min-[1080px]:w-80 min-[1080px]:h-[450px] object-cover rounded-lg shadow-md hover:scale-110 transition-transform duration-300 ease-in-out mx-auto my-2">
             </a>
             <p class="font-['Lato'] text-xl font-semibold text-gray-700 mt-5 shadow-text-sm">Balatro<br> &#36;9.990</p>
         </div>
         <div class="text-center">
-            <a href="producto3.html">
+            <a href="detalle3.html">
                 <img src="https://images.launchbox-app.com/eb16c101-3b48-45bd-95e2-ac095bdfbe2c.png" alt="Producto 3" class="w-64 h-90 min-[1080px]:w-80 min-[1080px]:h-[450px] object-cover rounded-lg shadow-md hover:scale-110 transition-transform duration-300 ease-in-out mx-auto my-2">
             </a>
             <p class="font-['Lato'] text-xl font-semibold text-gray-700 mt-5 shadow-text-sm">Baldur's gates 3<br> &#36;59.990</p>
         </div>
         <div class="text-center">
-            <a href="producto4.html">
+            <a href="detalle4.html">
                 <img src="https://i.pinimg.com/736x/07/99/3f/07993fb39b519bd1b3f36ce3337e0030.jpg" alt="Producto 4" class="w-64 h-90 min-[1080px]:w-80 min-[1080px]:h-[450px] object-cover rounded-lg shadow-md hover:scale-110 transition-transform duration-300 ease-in-out mx-auto my-2">
             </a>
             <p class="font-['Lato'] text-xl font-semibold text-gray-700 mt-5 shadow-text-sm">The legend of Zelda: Tears of the Kingdom<br> &#36;59.990</p>
         </div>
         <div class="text-center">
-            <a href="producto5.html">
+            <a href="detalle5.html">
                 <img src="https://w0.peakpx.com/wallpaper/722/674/HD-wallpaper-red-dead-redemption-games-western-guns-note-8-thumbnail.jpg" alt="Producto 5" class="w-64 h-90 min-[1080px]:w-80 min-[1080px]:h-[450px] object-cover rounded-lg shadow-md hover:scale-110 transition-transform duration-300 ease-in-out mx-auto my-2">
             </a>
             <p class="font-['Lato'] text-xl font-semibold text-gray-700 mt-5 shadow-text-sm">Red Dead Redemption 2<br> &#36;49.990</p>
         </div>
         <div class="text-center">
-            <a href="producto6.html">
+            <a href="detalle6.html">
                 <img src="https://cdn2.steamgriddb.com/grid/f9f8b2fa5755cb031cfc698e49cf7848.png" alt="Producto 6" class="w-64 h-90 min-[1080px]:w-80 min-[1080px]:h-[450px] object-cover rounded-lg shadow-md hover:scale-110 transition-transform duration-300 ease-in-out mx-auto my-2">
             </a>
             <p class="font-['Lato'] text-xl font-semibold text-gray-700 mt-5 shadow-text-sm">Titanfall 2<br> &#36;49.990</p>
