--- a/catalogo.html
+++ b/catalogo.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="src/output.css">
     <link rel="stylesheet" href="src/fonts.css">
 </head>
-<body class="bg-gradient-to-r from-gray-100 via-gray-300 to-gray-500 min-h-screen">
+<body class="bg-[url('https://wallpapercave.com/wp/wp11726455.jpg')]  bg-no-repeat bg-cover bg-center min-h-screen">
 
     <nav class="bg-gray-800 py-8">
         <div class="max-w-7xl mx-auto flex items-center justify-between">
@@ -42,10 +42,10 @@
 
     <br>
     
-    <h2 class="text-6xl font-extrabold text-center mt-6">Catálogo de Juegos</h2>
+    <h2 class="text-6xl font-extrabold text-center mt-6 text-white">Catálogo de Juegos</h2>
     
-    <h3 class="text-xl font-bold text-center mt-2 mb-0">Explora nuestra selección de juegos</h3>
-    <h4 class="text-l font-semibold text-center mt-2 mb-0">Haz click en las imagenes para mas info!</h4>
+    <h3 class="text-xl font-bold text-center mt-2 mb-0 text-white">Explora nuestra selección de juegos</h3>
+    <h4 class="text-l font-semibold text-center mt-2 mb-0 text-white">Haz click en las imagenes para mas info!</h4>
     <br>
 
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-6 justify-items-center mt-24 mx-4" style="font-family: 'Lato', sans-serif;">
@@ -54,37 +54,37 @@
             <a href="detalle.html">
                 <img src="https://wallpapers.com/images/hd/dead-by-daylight-blue-red-themed-logo-dpimk9xip4m6fquo.jpg" alt="Producto 1" class="w-64 h-90 min-[1080px]:w-80 min-[1080px]:h-[450px] object-cover rounded-lg shadow-md hover:scale-110 transition-transform duration-300 ease-in-out mx-auto my-2">
             </a>
-            <p class="font-['Lato'] text-xl font-semibold text-gray-700 mt-5 shadow-text-sm">Dead by Daylight<br> &#36;19.990</p>
+            <p class="font-['Lato'] text-xl font-semibold text-white mt-5 shadow-text-sm">Dead by Daylight<br> &#36;19.990</p>
         </div>
         <div class="text-center">
             <a href="detalle2.html">
                 <img src="https://wallpapercave.com/wp/wp14410139.jpg" alt="Producto 2" class="w-64 h-90 min-[1080px]:w-80 min-[1080px]:h-[450px] object-cover rounded-lg shadow-md hover:scale-110 transition-transform duration-300 ease-in-out mx-auto my-2">
             </a>
-            <p class="font-['Lato'] text-xl font-semibold text-gray-700 mt-5 shadow-text-sm">Balatro<br> &#36;9.990</p>
+            <p class="font-['Lato'] text-xl font-semibold text-white mt-5 shadow-text-sm">Balatro<br> &#36;9.990</p>
         </div>
         <div class="text-center">
             <a href="detalle3.html">
                 <img src="https://images.launchbox-app.com/eb16c101-3b48-45bd-95e2-ac095bdfbe2c.png" alt="Producto 3" class="w-64 h-90 min-[1080px]:w-80 min-[1080px]:h-[450px] object-cover rounded-lg shadow-md hover:scale-110 transition-transform duration-300 ease-in-out mx-auto my-2">
             </a>
-            <p class="font-['Lato'] text-xl font-semibold text-gray-700 mt-5 shadow-text-sm">Baldur's gates 3<br> &#36;59.990</p>
+            <p class="font-['Lato'] text-xl font-semibold text-white mt-5 shadow-text-sm">Baldur's gates 3<br> &#36;40.000</p>
         </div>
         <div class="text-center">
             <a href="detalle4.html">
                 <img src="https://i.pinimg.com/736x/07/99/3f/07993fb39b519bd1b3f36ce3337e0030.jpg" alt="Producto 4" class="w-64 h-90 min-[1080px]:w-80 min-[1080px]:h-[450px] object-cover rounded-lg shadow-md hover:scale-110 transition-transform duration-300 ease-in-out mx-auto my-2">
             </a>
-            <p class="font-['Lato'] text-xl font-semibold text-gray-700 mt-5 shadow-text-sm">The legend of Zelda: Tears of the Kingdom<br> &#36;59.990</p>
+            <p class="font-['Lato'] text-xl font-semibold text-white mt-5 shadow-text-sm">The legend of Zelda: Tears of the Kingdom<br> &#36;60.000</p>
         </div>
         <div class="text-center">
             <a href="detalle5.html">
                 <img src="https://w0.peakpx.com/wallpaper/722/674/HD-wallpaper-red-dead-redemption-games-western-guns-note-8-thumbnail.jpg" alt="Producto 5" class="w-64 h-90 min-[1080px]:w-80 min-[1080px]:h-[450px] object-cover rounded-lg shadow-md hover:scale-110 transition-transform duration-300 ease-in-out mx-auto my-2">
             </a>
-            <p class="font-['Lato'] text-xl font-semibold text-gray-700 mt-5 shadow-text-sm">Red Dead Redemption 2<br> &#36;49.990</p>
+            <p class="font-['Lato'] text-xl font-semibold text-white mt-5 shadow-text-sm">Red Dead Redemption 2<br> &#36;60.000</p>
         </div>
         <div class="text-center">
             <a href="detalle6.html">
                 <img src="https://cdn2.steamgriddb.com/grid/f9f8b2fa5755cb031cfc698e49cf7848.png" alt="Producto 6" class="w-64 h-90 min-[1080px]:w-80 min-[1080px]:h-[450px] object-cover rounded-lg shadow-md hover:scale-110 transition-transform duration-300 ease-in-out mx-auto my-2">
             </a>
-            <p class="font-['Lato'] text-xl font-semibold text-gray-700 mt-5 shadow-text-sm">Titanfall 2<br> &#36;49.990</p>
+            <p class="font-['Lato'] text-xl font-semibold text-white mt-5 shadow-text-sm">Titanfall 2<br> &#36;49.990</p>
         </div>
     </div>
 
