--- a/contacto.html
+++ b/contacto.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - PuertoGames</title>
-    <link rel="stylesheet" href="/src/output.css">
+    <link rel="stylesheet" href="src/output.css">
 </head>
-<body>
+<body class="bg-[url('https://wallpapercave.com/wp/wp11726455.jpg')]  bg-no-repeat bg-cover bg-center">
     <nav class="bg-gray-800 py-8">
         <div class="max-w-7xl mx-auto flex items-center justify-between">
         <div class="flex items-center space-x-2">
@@ -38,7 +38,7 @@
         </div>
     </nav>
 
-    <section class="p-12 bg-gradient-to-r from-gray-100 via-gray-300 to-gray-500 min-h-screen flex items-center justify-center">
+    <section class=" min-h-screen flex items-center justify-center">
         <div class="max-w-md w-full bg-white shadow-lg rounded-lg p-8">
             <h2 class="text-3xl font-bold text-gray-800 mb-6 text-center">Contáctanos</h2>
             <form action="#" method="POST" class="space-y-4">
@@ -80,7 +80,7 @@
     </footer>
 
     <script>
-        // Script para el menú móvil (copiado de index.html si es necesario)
+        // Script para el menú móvil
         document.getElementById('menuButton').addEventListener('click', function() {
             var mobileMenu = document.getElementById('mobileMenu');
             if (mobileMenu.classList.contains('hidden')) {
