--- a/detalle.html
+++ b/detalle.html
@@ -59,16 +59,16 @@
     
     <!-- Imagen del juego -->
     <div>
-      <img src="https://image.api.playstation.com/vulcan/ap/rnd/202302/2321/3098481c9164bb5f33069b37e49fba1a572ea3b89971ee7b.jpg" alt="Juego seleccionado" class="rounded-xl shadow-xl w-full" />
+      <img src="https://wallpapers.com/images/hd/dead-by-daylight-blue-red-themed-logo-dpimk9xip4m6fquo.jpg" alt="Juego seleccionado" class="rounded-xl shadow-xl w-full" />
     </div>
 
     <!-- Detalles del producto -->
     <div>
-      <h2 class="text-4xl font-bold text-gray-900 mb-4">The Legend of Realms</h2>
-      <p class="text-sm text-gray-500 mb-1 uppercase tracking-wider">Categoría: Aventura / Rol</p>
-      <p class="text-2xl font-semibold text-green-600 mb-6">$59.990 CLP </p>
+      <h2 class="text-4xl font-bold text-gray-900 mb-4">Dead by Daylight</h2>
+      <p class="text-sm text-gray-500 mb-1 uppercase tracking-wider">Categoría: Survival horror, Videojuego de pelea </p>
+      <p class="text-2xl font-semibold text-green-600 mb-6">$19.990 CLP </p>
       <p class="text-gray-700 leading-relaxed mb-8">
-        Explora un mundo épico lleno de misterios, enemigos legendarios y paisajes deslumbrantes. The Legend of Realms te ofrece una experiencia inmersiva con mecánicas innovadoras y narrativa profunda.
+        Dead by Daylight es un videojuego de terror y supervivencia multijugador asimétrico en línea desarrollado y publicado por el estudio canadiense Behaviour Interactive
       </p>
       <a href="#" class="inline-block bg-green-600 hover:bg-green-700 text-white text-base px-8 py-3 rounded-xl font-semibold transition shadow-md">
         Comprar ahora
@@ -107,5 +107,4 @@
 
 </body>
 </html>
-
 
