--- a/detalle2.html
+++ b/detalle2.html
@@ -59,16 +59,16 @@
     
     <!-- Imagen del juego -->
     <div>
-      <img src="https://image.api.playstation.com/vulcan/ap/rnd/202302/2321/3098481c9164bb5f33069b37e49fba1a572ea3b89971ee7b.jpg" alt="Juego seleccionado" class="rounded-xl shadow-xl w-full" />
+      <img src="https://clan.cloudflare.steamstatic.com/images/44208250/7c77ae325131b1f46f2e94ebac8f55c8d1dbaf13.png" alt="Juego seleccionado" class="rounded-xl shadow-xl w-full" />
     </div>
 
     <!-- Detalles del producto -->
     <div>
-      <h2 class="text-4xl font-bold text-gray-900 mb-4">The Legend of Realms</h2>
-      <p class="text-sm text-gray-500 mb-1 uppercase tracking-wider">Categoría: Aventura / Rol</p>
-      <p class="text-2xl font-semibold text-green-600 mb-6">$59.990 CLP </p>
+      <h2 class="text-4xl font-bold text-gray-900 mb-4">Balatro</h2>
+      <p class="text-sm text-gray-500 mb-1 uppercase tracking-wider">Categoría: Juego de cartas</p>
+      <p class="text-2xl font-semibold text-green-600 mb-6">$9.990 CLP </p>
       <p class="text-gray-700 leading-relaxed mb-8">
-        Explora un mundo épico lleno de misterios, enemigos legendarios y paisajes deslumbrantes. The Legend of Realms te ofrece una experiencia inmersiva con mecánicas innovadoras y narrativa profunda.
+        Balatro es un videojuego roguelike de construcción de mazos de baraja inglesa desarrollado por LocalThunk y publicado por Playstack. 
       </p>
       <a href="#" class="inline-block bg-green-600 hover:bg-green-700 text-white text-base px-8 py-3 rounded-xl font-semibold transition shadow-md">
         Comprar ahora
