--- a/detalle3.html
+++ b/detalle3.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -59,16 +58,16 @@
     
     <!-- Imagen del juego -->
     <div>
-      <img src="https://image.api.playstation.com/vulcan/ap/rnd/202302/2321/3098481c9164bb5f33069b37e49fba1a572ea3b89971ee7b.jpg" alt="Juego seleccionado" class="rounded-xl shadow-xl w-full" />
+      <img src="https://images.launchbox-app.com/eb16c101-3b48-45bd-95e2-ac095bdfbe2c.png" alt="Juego seleccionado" class="rounded-xl shadow-xl w-full" />
     </div>
 
     <!-- Detalles del producto -->
     <div>
-      <h2 class="text-4xl font-bold text-gray-900 mb-4">The Legend of Realms</h2>
-      <p class="text-sm text-gray-500 mb-1 uppercase tracking-wider">Categoría: Aventura / Rol</p>
+      <h2 class="text-4xl font-bold text-gray-900 mb-4">Baldur's gates 3</h2>
+      <p class="text-sm text-gray-500 mb-1 uppercase tracking-wider">Categoría: Videojuego de rol, Videojuego de aventura, Videojuego de estrategia.</p>
       <p class="text-2xl font-semibold text-green-600 mb-6">$59.990 CLP </p>
       <p class="text-gray-700 leading-relaxed mb-8">
-        Explora un mundo épico lleno de misterios, enemigos legendarios y paisajes deslumbrantes. The Legend of Realms te ofrece una experiencia inmersiva con mecánicas innovadoras y narrativa profunda.
+        Baldur's Gate III es un videojuego de rol desarrollado por Larian Studios. Representa la tercera entrega principal de la serie Baldur's Gate, basada en el sistema de juego de rol de mesa Dungeons y Dragons.
       </p>
       <a href="#" class="inline-block bg-green-600 hover:bg-green-700 text-white text-base px-8 py-3 rounded-xl font-semibold transition shadow-md">
         Comprar ahora
