--- a/detalle4.html
+++ b/detalle4.html
@@ -59,16 +59,16 @@
     
     <!-- Imagen del juego -->
     <div>
-      <img src="https://image.api.playstation.com/vulcan/ap/rnd/202302/2321/3098481c9164bb5f33069b37e49fba1a572ea3b89971ee7b.jpg" alt="Juego seleccionado" class="rounded-xl shadow-xl w-full" />
+      <img src="https://i.pinimg.com/736x/07/99/3f/07993fb39b519bd1b3f36ce3337e0030.jpg" alt="Juego seleccionado" class="rounded-xl shadow-xl w-full" />
     </div>
 
     <!-- Detalles del producto -->
     <div>
-      <h2 class="text-4xl font-bold text-gray-900 mb-4">The Legend of Realms</h2>
-      <p class="text-sm text-gray-500 mb-1 uppercase tracking-wider">Categoría: Aventura / Rol</p>
+      <h2 class="text-4xl font-bold text-gray-900 mb-4">The legend of Zelda: Tears of the Kingdom</h2>
+      <p class="text-sm text-gray-500 mb-1 uppercase tracking-wider">Categoría:  Videojuego de acción y aventura, Videojuego de lógica, Videojuego de pelea, Videojuego de disparos.</p>
       <p class="text-2xl font-semibold text-green-600 mb-6">$59.990 CLP </p>
       <p class="text-gray-700 leading-relaxed mb-8">
-        Explora un mundo épico lleno de misterios, enemigos legendarios y paisajes deslumbrantes. The Legend of Realms te ofrece una experiencia inmersiva con mecánicas innovadoras y narrativa profunda.
+        The Legend of Zelda: Tears of the Kingdom es un videojuego de acción-aventura de 2023 de la serie The Legend of Zelda, desarrollado por la filial Nintendo EPD en colaboración con Monolith Soft y publicado por Nintendo para la consola Nintendo Switch.
       </p>
       <a href="#" class="inline-block bg-green-600 hover:bg-green-700 text-white text-base px-8 py-3 rounded-xl font-semibold transition shadow-md">
         Comprar ahora
