--- a/detalle6.html
+++ b/detalle6.html
@@ -59,16 +59,16 @@
     
     <!-- Imagen del juego -->
     <div>
-      <img src="https://image.api.playstation.com/vulcan/ap/rnd/202302/2321/3098481c9164bb5f33069b37e49fba1a572ea3b89971ee7b.jpg" alt="Juego seleccionado" class="rounded-xl shadow-xl w-full" />
+      <img src="https://cdn2.steamgriddb.com/grid/f9f8b2fa5755cb031cfc698e49cf7848.png" alt="Juego seleccionado" class="rounded-xl shadow-xl w-full" />
     </div>
 
     <!-- Detalles del producto -->
     <div>
-      <h2 class="text-4xl font-bold text-gray-900 mb-4">The Legend of Realms</h2>
+      <h2 class="text-4xl font-bold text-gray-900 mb-4">Titanfall 2</h2>
       <p class="text-sm text-gray-500 mb-1 uppercase tracking-wider">Categoría: Aventura / Rol</p>
-      <p class="text-2xl font-semibold text-green-600 mb-6">$59.990 CLP </p>
+      <p class="text-2xl font-semibold text-green-600 mb-6">$49.990 CLP </p>
       <p class="text-gray-700 leading-relaxed mb-8">
-        Explora un mundo épico lleno de misterios, enemigos legendarios y paisajes deslumbrantes. The Legend of Realms te ofrece una experiencia inmersiva con mecánicas innovadoras y narrativa profunda.
+        Titanfall 2 es un videojuego de acción en primera persona estilo mecha, que ha sido desarrollado por Respawn Entertainment y está distribuido por EA Games para Microsoft Windows, PlayStation 4 y Xbox One.
       </p>
       <a href="#" class="inline-block bg-green-600 hover:bg-green-700 text-white text-base px-8 py-3 rounded-xl font-semibold transition shadow-md">
         Comprar ahora
