--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                     <div class="bg-white shadow-lg rounded-lg overflow-hidden">
                         <img src="https://wallpapers.com/images/featured/dark-souls-3-l5tab4snae2iftty.jpg" alt="Juego 1" class="w-full h-56 object-cover">
                         <div class="p-4">
-                        <h3 class="text-xl font-semibold text-gray-800">Rol</h3>
-                        <p class="text-gray-600">Interpreta personajes épicos y conquista el mundo</p>
+                        <h3 class="text-xl font-semibold text-gray-800">Aventura</h3>
+                        <p class="text-gray-600">Explora mundos épicos y vive emocionantes aventuras</p>
                         <button class="mt-4 text-blue-500 hover:text-blue-700">Ver más</button>
                         </div>
                     </div>
